--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -1454,7 +1454,14 @@
     "    rolling_stats = group[cols].rolling(3, closed='left').mean() # \n",
     "    group[new_cols] = rolling_stats # on ajoute ces stats dans de nouvelles colonnes\n",
     "    group = group.dropna(subset=new_cols)\n",
-    "    return group"
+    "    return group\n",
+    "\n",
+    "\n",
+    "# Une moyenne mobile permet de lisser une série de valeurs exprimées en fonction du temps (série chronologique). \n",
+    "# Elle permet d'éliminer les fluctuations les moins significatives. On calcule des moyennes mobiles d'ordre 3, 4, 5, etc. \n",
+    "# L'ordre est le nombre de périodes (années, trimestres, mois, etc.) sur lesquelles la moyenne mobile est calculée.\n",
+    "\n",
+    "# https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rolling.html"
    ]
   },
   {
