--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -4962,8 +4962,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [01:18<00:00,  3.95s/it]\n",
-      "100%|██████████| 20/20 [01:56<00:00,  5.80s/it]\n"
+      "100%|██████████| 20/20 [01:47<00:00,  5.40s/it]\n",
+      "100%|██████████| 20/20 [02:01<00:00,  6.06s/it]\n"
      ]
     }
    ],
@@ -5123,124 +5123,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-08-08</td>\n",
-       "      <td>20:45</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-08-07</td>\n",
+       "      <td>21:00</td>\n",
        "      <td>Ligue 1</td>\n",
        "      <td>Journée 1</td>\n",
-       "      <td>Dim</td>\n",
+       "      <td>Sam</td>\n",
        "      <td>Extérieur</td>\n",
        "      <td>V</td>\n",
-       "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>Montpellier</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>33.3</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>Marseille</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-08-15</td>\n",
-       "      <td>20:45</td>\n",
-       "      <td>Ligue 1</td>\n",
-       "      <td>Journée 2</td>\n",
-       "      <td>Dim</td>\n",
-       "      <td>Domicile</td>\n",
-       "      <td>N</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Bordeaux</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Troyes</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>0.20</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>0.17</td>\n",
        "      <td>1.00</td>\n",
        "      <td>2022</td>\n",
-       "      <td>Marseille</td>\n",
+       "      <td>ParisSaintGermain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2021-08-28</td>\n",
+       "      <td>2021-08-14</td>\n",
        "      <td>21:00</td>\n",
        "      <td>Ligue 1</td>\n",
-       "      <td>Journée 4</td>\n",
+       "      <td>Journée 2</td>\n",
        "      <td>Sam</td>\n",
        "      <td>Domicile</td>\n",
        "      <td>V</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Saint-Étienne</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Strasbourg</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>19.0</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>26.3</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>45.5</td>\n",
+       "      <td>0.27</td>\n",
        "      <td>0.60</td>\n",
        "      <td>2022</td>\n",
-       "      <td>Marseille</td>\n",
+       "      <td>ParisSaintGermain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2021-09-11</td>\n",
+       "      <td>2021-08-20</td>\n",
        "      <td>21:00</td>\n",
        "      <td>Ligue 1</td>\n",
-       "      <td>Journée 5</td>\n",
-       "      <td>Sam</td>\n",
+       "      <td>Journée 3</td>\n",
+       "      <td>Ven</td>\n",
+       "      <td>Extérieur</td>\n",
+       "      <td>V</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Brest</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>ParisSaintGermain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-08-29</td>\n",
+       "      <td>20:45</td>\n",
+       "      <td>Ligue 1</td>\n",
+       "      <td>Journée 4</td>\n",
+       "      <td>Dim</td>\n",
        "      <td>Extérieur</td>\n",
        "      <td>V</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>Monaco</td>\n",
+       "      <td>Reims</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>38.5</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>0.40</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.67</td>\n",
        "      <td>2022</td>\n",
-       "      <td>Marseille</td>\n",
+       "      <td>ParisSaintGermain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2021-09-19</td>\n",
+       "      <td>2021-09-11</td>\n",
        "      <td>17:00</td>\n",
        "      <td>Ligue 1</td>\n",
-       "      <td>Journée 6</td>\n",
-       "      <td>Dim</td>\n",
+       "      <td>Journée 5</td>\n",
+       "      <td>Sam</td>\n",
        "      <td>Domicile</td>\n",
        "      <td>V</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
-       "      <td>Rennes</td>\n",
+       "      <td>Clermont Foot</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>35.3</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.33</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.57</td>\n",
        "      <td>2022</td>\n",
-       "      <td>Marseille</td>\n",
+       "      <td>ParisSaintGermain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -5388,16 +5388,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1482 rows × 31 columns</p>\n",
+       "<p>1520 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          Date  Heure     Comp        Tour Jour    Tribune Résultat BM BE  \\\n",
-       "0   2021-08-08  20:45  Ligue 1   Journée 1  Dim  Extérieur        V  3  2   \n",
-       "1   2021-08-15  20:45  Ligue 1   Journée 2  Dim   Domicile        N  2  2   \n",
-       "2   2021-08-28  21:00  Ligue 1   Journée 4  Sam   Domicile        V  3  1   \n",
-       "3   2021-09-11  21:00  Ligue 1   Journée 5  Sam  Extérieur        V  2  0   \n",
-       "5   2021-09-19  17:00  Ligue 1   Journée 6  Dim   Domicile        V  2  0   \n",
+       "1   2021-08-07  21:00  Ligue 1   Journée 1  Sam  Extérieur        V  2  1   \n",
+       "2   2021-08-14  21:00  Ligue 1   Journée 2  Sam   Domicile        V  4  2   \n",
+       "3   2021-08-20  21:00  Ligue 1   Journée 3  Ven  Extérieur        V  4  2   \n",
+       "4   2021-08-29  20:45  Ligue 1   Journée 4  Dim  Extérieur        V  2  0   \n",
+       "5   2021-09-11  17:00  Ligue 1   Journée 5  Sam   Domicile        V  4  0   \n",
        "..         ...    ...      ...         ...  ...        ...      ... .. ..   \n",
        "34  2021-04-25  15:00  Ligue 1  Journée 34  Dim  Extérieur        D  1  5   \n",
        "35  2021-05-02  15:00  Ligue 1  Journée 35  Dim   Domicile        D  1  5   \n",
@@ -5406,11 +5406,11 @@
        "38  2021-05-23  21:00  Ligue 1  Journée 38  Dim  Extérieur        V  1  0   \n",
        "\n",
        "       Adversaire  ...  PénM  PénT  Buts  Tirs   TC   TC% B/Tir  B/TC Saison  \\\n",
-       "0     Montpellier  ...   0.0   0.0   3.0  21.0  7.0  33.3  0.14  0.43   2022   \n",
-       "1        Bordeaux  ...   0.0   0.0   2.0  10.0  2.0  20.0  0.20  1.00   2022   \n",
-       "2   Saint-Étienne  ...   0.0   0.0   3.0  19.0  5.0  26.3  0.16  0.60   2022   \n",
-       "3          Monaco  ...   0.0   0.0   2.0  13.0  5.0  38.5  0.15  0.40   2022   \n",
-       "5          Rennes  ...   0.0   0.0   2.0  17.0  6.0  35.3  0.12  0.33   2022   \n",
+       "1          Troyes  ...   0.0   0.0   2.0  12.0  2.0  16.7  0.17  1.00   2022   \n",
+       "2      Strasbourg  ...   0.0   0.0   3.0  11.0  5.0  45.5  0.27  0.60   2022   \n",
+       "3           Brest  ...   0.0   0.0   4.0  16.0  8.0  50.0  0.25  0.50   2022   \n",
+       "4           Reims  ...   0.0   0.0   2.0  12.0  3.0  25.0  0.17  0.67   2022   \n",
+       "5   Clermont Foot  ...   0.0   0.0   4.0  13.0  7.0  53.8  0.31  0.57   2022   \n",
        "..            ...  ...   ...   ...   ...   ...  ...   ...   ...   ...    ...   \n",
        "34         Rennes  ...   1.0   1.0   1.0   3.0  0.0   0.0  0.00   NaN   2021   \n",
        "35           Metz  ...   0.0   0.0   1.0  10.0  4.0  40.0  0.10  0.25   2021   \n",
@@ -5418,20 +5418,20 @@
        "37         Nantes  ...   0.0   0.0   0.0  10.0  1.0  10.0  0.00  0.00   2021   \n",
        "38  Saint-Étienne  ...   0.0   1.0   1.0   9.0  2.0  22.2  0.11  0.50   2021   \n",
        "\n",
-       "       Equipe  \n",
-       "0   Marseille  \n",
-       "1   Marseille  \n",
-       "2   Marseille  \n",
-       "3   Marseille  \n",
-       "5   Marseille  \n",
-       "..        ...  \n",
-       "34      Dijon  \n",
-       "35      Dijon  \n",
-       "36      Dijon  \n",
-       "37      Dijon  \n",
-       "38      Dijon  \n",
+       "               Equipe  \n",
+       "1   ParisSaintGermain  \n",
+       "2   ParisSaintGermain  \n",
+       "3   ParisSaintGermain  \n",
+       "4   ParisSaintGermain  \n",
+       "5   ParisSaintGermain  \n",
+       "..                ...  \n",
+       "34              Dijon  \n",
+       "35              Dijon  \n",
+       "36              Dijon  \n",
+       "37              Dijon  \n",
+       "38              Dijon  \n",
        "\n",
-       "[1482 rows x 31 columns]"
+       "[1520 rows x 31 columns]"
       ]
      },
      "execution_count": 22,
